<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_small"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textLocalVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:textSize="@dimen/text_size_medium"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textRemoteVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:textSize="@dimen/text_size_medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_medium">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonKeepLocal"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/keep_local"
                android:layout_marginEnd="@dimen/spacing_small"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonKeepRemote"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/keep_remote"
                android:layout_marginEnd="@dimen/spacing_small"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonKeepBoth"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/keep_both"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
