<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_large">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_factor_title"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textInstructions"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Enter the 6-digit code from your authenticator app"
        android:textSize="@dimen/text_size_medium"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_xlarge"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutOtp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutOtp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/otp_code_hint"
        android:layout_marginTop="@dimen/spacing_xlarge"
        app:layout_constraintTop_toBottomOf="@id/textInstructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonVerify"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editOtpCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6"
            android:gravity="center"
            android:textSize="@dimen/text_size_xlarge"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonVerify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verify_button"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutOtp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
